# tree-sitter-ssh-config

./: .gitattributes  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  jsconfig.json  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json  utils.js
.github/workflows/: ci.yml  release.yml
bindings/c/: tree-sitter-ssh-config.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ssh_config/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSSHConfig/: ssh_config.h
bindings/swift/TreeSitterSSHConfigTests/: TreeSitterSSHConfigTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: examples.txt  issues.txt  openssh.txt
test/highlight/: ssh_config
