[package]
name = "tree-sitter-ssh-config"
description = "OpenSSH config grammar for the tree-sitter parsing library"
version = "0.2.1"
keywords = ["incremental", "parsing", "ssh"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-ssh-config"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "^1.0"
