[package]
name = "tree-sitter-ssh-config"
description = "OpenSSH config grammar for tree-sitter"
version = "0.3.0"
keywords = ["incremental", "parsing", "ssh"]
categories = ["parsing", "text-editors"]
authors = ["ObserverOfTime <chronobserver@disroot.org>"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-ssh-config"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.21.0"

[build-dependencies]
cc = "^1.0.94"
