[package]
authors      = [ "ObserverOfTime <chronobserver@disroot.org>" ]
autoexamples = false
categories   = [ "parser-implementations", "parsing", "text-editors" ]
description  = "OpenSSH config grammar for tree-sitter"
edition      = "2024"
keywords     = [ "incremental", "parsing", "tree-sitter", "ssh-config" ]
license      = "MIT"
name         = "tree-sitter-ssh-config"
readme       = "README.md"
repository   = "https://github.com/tree-sitter-grammars/tree-sitter-ssh-config"
version      = "0.5.0"

build   = "bindings/rust/build.rs"
include = [ "bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json", "/LICENSE" ]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.10"
