[build-system]
build-backend = "setuptools.build_meta"
requires      = [ "setuptools>=62.4.0", "wheel" ]

[project]
authors = [ { email = "chronobserver@disroot.org", name = "ObserverOfTime" } ]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
description = "OpenSSH config grammar for tree-sitter"
keywords = [ "incremental", "parsing", "tree-sitter", "ssh-config" ]
license.text = "MIT"
name = "tree-sitter-ssh-config"
readme = "README.md"
requires-python = ">=3.10"
version = "0.5.0"

[project.urls]
Homepage = "https://github.com/tree-sitter-grammars/tree-sitter-ssh-config"

[project.optional-dependencies]
core = [ "tree-sitter~=0.24" ]

[tool.cibuildwheel]
build          = "cp310-*"
build-frontend = "build"
